--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Demo project to demostrate the codeceptjs with graphql tests",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "codeceptjs run-workers 2"
   },
   "keywords": [
     "codeceptjs",
